2004-02-28  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	* pa.h (TRAMPOLINE_TEMPLATE, TRAMPOLINE_SIZE, TRAMPOLINE_CODE_SIZE,
	MIN_CACHELINE_SIZE, INITIALIZE_TRAMPOLINE): Backport fixes from 3.5.
	* pa.md (anddi3, dcacheflush, icacheflush): Likewise.

	* pa64-hpux.h (LIB_SPEC): Fix linking under HP-UX 11.00 with -p and -pg.

2004-02-27  Ian Lance Taylor  <ian@wasabisystems.com>

	PR optimization/7871
	* flow.c (mark_set_1): Don't add LOG_LINKS for global registers
	from or to call insns.	

2004-02-27  Eric Botcazou  <ebotcazou@libertysurf.fr>

	PR optimization/7871
	* flow.c (propagate_one_insn): Interpret calls as setting global
	registers, not merely clobbering them.

2004-02-26  Richard Earnshaw  <rearnsha@arm.com>
	Daniel Jacobowitz  <drow@mvista.com>

	PR target/14302
	* arm.h (ARM_GO_IF_LEGITIMATE_ADDRESS): Don't check the mode
	size for minipool references.

2004-02-25  Richard Earnshaw  <rearnsha@arm.com>

	PR target/14166
	* arm.h (THUMB_GO_IF_LEGITIMATE_ADDRESS): Only allow constant pool 
	references from SImode.
	* arm.md (thumb_movhi_insn): Don't allow minipool references.

2004-02-24  Bob Wilson  <bob.wilson@acm.org>

	Backport from mainline (changes to xtensa_expand_prologue go into
	xtensa_reorg instead; remove irrelevant portions of the patch)

	2004-02-09  Bob Wilson  <bob.wilson@acm.org>:

	* config/xtensa/xtensa-protos.h (xtensa_copy_incoming_a7): Update.
	(init_cumulative_args): Likewise.
	(a7_overlap_mentioned_p): Delete prototype.
	* config/xtensa/xtensa.c (struct machine_function): Replace
	incoming_a7_copied field with need_a7_copy and vararg_a7 flags.
	Add set_frame_ptr_insn field.
	(xtensa_emit_move_sequence): Update call to xtensa_copy_incoming_a7.
	(xtensa_copy_incoming_a7): Rewrite to check need_a7_copy flag and check
	if the operand is an argument in a7.  If so, copy a7 to a new pseudo
	at the function entry and replace the operand with the pseudo.
	(init_cumulative_args): Remove unused arguments.  Add new "incoming"